--- a/finansys/package.json
+++ b/finansys/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.4",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -29,8 +30,8 @@
     "moment": "^2.22.2",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.5",
-    "toastr": "^2.1.4",
     "rxjs": "~6.3.3",
+    "toastr": "^2.1.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
